--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="/">Főoldal</a>
         </li>
         <li>
-            <a href="/pages/orders.html">egyebek</a>
+            <a href="/Pages/orders.html">egyebek</a>
         </li>
         <li>
             <a href="/Pages/products.html">products</a>
