--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <a href="/">Főoldal</a>
         </li>
         <li>
-            <a href="/Pages/orders.html">egyebek</a>
+            <a href="Pages/orders.html">
+                egyebek
+            </a>
         </li>
         <li>
             <a href="/Pages/products.html">products</a>
