--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </li>
         <li>
             <a href="Pages/orders.html">
-                egyebek
+                orders
             </a>
         </li>
         <li>
